# squeezelite-esp32

./: build.bat  nvs_config_squeezelite.json  sdkconfig  sdkconfig.defaults  version.txt
components/_override/: i2s.c
components/cspot/: CMakeLists.txt
components/cspot/include/: AudioSink.h  Task.h
components/cspot/protos/: ReflectTypeInfo.cpp  ReflectionInternal.h  metadata.h  protobuf.h
components/cspot/shim/: ShimAudioSink.cpp  ShimAudioSink.h  cspot_sink.c  cspot_sink.h
components/cspot/src/: AudioChunkManager.cpp  ChunkedAudioStream.cpp  MercuryManager.cpp  Player.cpp
components/platform_config/: platform_config.c
components/platform_console/: presets.json
components/services/: accessors.c  audio_controls.c  audio_controls.h  buttons.c  gpio_exp.c  gpio_exp.h  led.c
components/squeezelite/: CMakeLists.txt  adac.h  controls.c  decode_external.c  output_i2s.c
components/squeezelite/ebird/: sys_ebird.c
components/wifi-manager/: network_manager.c  network_manager.h
main/: CMakeLists.txt  Kconfig.projbuild  esp_app_main.c
